# MCP-Freshbooks

./: .env.example  README.md  devto_draft.md  glama.json  mcpize.yaml  pyproject.toml  smithery.yaml
.actor/: Dockerfile  actor.json  input_schema.json
src/mcp_freshbooks/: __init__.py  __main__.py  auth.py  client.py  server.py
