[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-freshbooks"
version = "0.1.0"
description = "Production-grade MCP server for FreshBooks — invoices, clients, expenses, payments, time tracking, projects, estimates, and reports."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alex LaGuardia", email = "alex@alexlaguardia.dev" }
]
keywords = ["mcp", "freshbooks", "accounting", "invoices", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-freshbooks = "mcp_freshbooks.server:main"

[project.urls]
Homepage = "https://github.com/AlexlaGuardia/mcp-freshbooks"
Repository = "https://github.com/AlexlaGuardia/mcp-freshbooks"
Issues = "https://github.com/AlexlaGuardia/mcp-freshbooks/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_freshbooks"]
